--- a/Staff/Arrow/index.html
+++ b/Staff/Arrow/index.html
@@ -33,6 +33,8 @@
 </head>
 <body>
     <main class="wrap" role="main">
+        <a href="/" class="btn" style="display:block;text-align:center;margin-bottom:16px">← Back Home</a>
+
         <header>
             <div class="avatar" aria-hidden="true">
                 <img src="/media/player/aaronc.png" alt="Owner avatar placeholder" />
@@ -83,9 +85,9 @@
 
                 <h3 class="section-title" style="margin-top:14px">Socials</h3>
                 <ul style="padding:0;margin:0;list-style:none;display:flex;flex-direction:column;gap:8px">
-                    <li><a href="https://youtube.com/@acole_dev" target="_blank" rel="noopener" style="color:var(--accent);text-decoration:none">YouTube</a></li>
-                    <li><a href="https://x.com/arrow_cole" target="_blank" rel="noopener" style="color:var(--accent);text-decoration:none">Twitter/X</a></li>
-                    <li><a href="https://twitch.tv/arrow_cole" target="_blank" rel="noopener" style="color:var(--accent);text-decoration:none">Twitch</a></li>
+                    <li><a href="https://youtube.com/@acoleminecraft" target="_blank" rel="noopener" style="color:var(--accent);text-decoration:none">YouTube</a></li>
+                    <li><a href="/comingsoon" target="_blank" rel="noopener" style="color:var(--accent);text-decoration:none">Twitter/X</a></li>
+                    <li><a href="/comingsoon" target="_blank" rel="noopener" style="color:var(--accent);text-decoration:none">Twitch</a></li>
                 </ul>
 
                 <h3 class="section-title" style="margin-top:14px">Server Rules (short)</h3>
