--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
             <img class="main5_admins_img" alt="admin member img" src="media/player/aaronc.png">
             <div class="main5_admins_description_div">
               <a class="main5_admins_description_rank main5_admins_description_rank_owner">[Owner]</a>
-              <a class="main5_admins_description_title" href="arrowc">Arrow C.</a>
+              <a class="main5_admins_description_title" href="Staff/Arrow">Arrow C.</a>
               <a class="main5_admins_description">Owner<br>description</a>
             </div>
           </div>
@@ -154,7 +154,7 @@
             <img class="main5_admins_img" alt="admin member img" src="media/player/apexg.png">
             <div class="main5_admins_description_div">
               <a class="main5_admins_description_rank main5_admins_description_rank_admin">[Admin]</a>
-              <a class="main5_admins_description_title" href="apexg">Apex G.</a>
+              <a class="main5_admins_description_title" href="Staff/Apex">Apex G.</a>
               <a class="main5_admins_description">Admin<br>description</a>
             </div>
           </div>
@@ -214,7 +214,7 @@
                 <a>Version:</a>
               </div>
               <div class="main3_join_values">
-                <a>play.acolemc.xyz</a>
+                <a>java.acolemc.xyz</a>
                 <a>1.21.8</a>
               </div>
             </div>
@@ -241,7 +241,7 @@
                 <a>Port:</a>
               </div>
               <div class="main3_join_values">
-                <a>mc.acolemc.xyz</a>
+                <a>play.acolemc.xyz</a>
                 <a>1.21.8</a>
                 <a>Coming Soon</a>
               </div>
@@ -251,7 +251,7 @@
       </div>
     </div>
     <footer class="copyright_div">
-      <a href="https://github.com/FQQD/MCServer-Web-Template" class="copyright">Made by FQQD 2023 - Edited by Aaron Cole 2025</a>
+      <a href="https://aaroncole.us" class="copyright">Made by Aaron Cole 2025</a>
     </footer>
   </body>
 </html>
